FIX shift start view confirmation button position

--- a/src/css/display/modal.css
+++ b/src/css/display/modal.css
@@ -64,5 +64,5 @@
 button.button-modal {
     padding: 1vh 5vh !important;
     margin-top: 10vh !important;
-    margin-left: 70% !important;
+    margin-left: 50% !important;
 }
